# hermit

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: .gitignore  README.md  bench-artifacts.sh  bench-cli.sh
benchmarks/bench-cli/custom/ubuntu/: Hermitfile
hermit-cli/: CMakeLists.txt
hermit-cli/crates/hermitfile-parser/: Cargo.toml
hermit-cli/crates/hermitfile-parser/src/: main.rs
src/: hermit-base.c  log.h  wamr.c
