[package]
name = "hermitfile-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["color", "error-context", "help", "std", "suggestions", "usage", "env", "wrap_help", "derive"] }
dockerfile-parser = { path = "../../../dockerfile-parser-rs" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
chrono-wasi = { version = "0.4.11", optional = true }

[dependencies.zip]
version = "0.6.6"
default-features = false
features = ["deflate"]

[features]
logging = ["dep:chrono-wasi"]
